--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,5 +1,18 @@
 <%= form_with(model: task, local: true) do |f| %>
-  <%= f.label :content, 'メッセージ' %>
+  <% if task.errors.any? %>
+    <div id="error_explanation">
+      <ul>
+        <% task.errors.full_messages.each do |tk| %>
+          <li><%= tk %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  
+  <%= f.label :status, 'ステータス' %>
+  <%= f.text_field :status %>
+  
+  <%= f.label :content, 'タスク' %>
   <%= f.text_field :content %>
 
   <%= f.submit '投稿' %>
